--- a/APP2000/APP2000/APP2000/Views/Shared/_Layout.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Kandidat", "Kandidat", "Home")</li>
-                        <li>@Html.ActionLink("Ävstemning", "Avstemning", "Home")</li>
+                        <li>@Html.ActionLink("Avstemning", "Avstemning", "Home")</li>
                     }
                     else
                     {
