--- a/APP2000/APP2000/APP2000/Views/Avstemning/Avstemning.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Avstemning/Avstemning.cshtml
@@ -15,16 +15,16 @@
     </div>
     <div class="col-md-4">
         <p>
-            Kandidat 1, Simen <a class="btn btn-default" href="Stemt"> Stem</a>
+            Kandidat 1, Simen <a class="btn btn-default" href="/Views/Avstemning/Stemt.cshtml"> Stem</a>
         </p>
         <p>
-            Kandidat 2, Ole <a class="btn btn-default" href="Stemt"> Stem</a>
+            Kandidat 2, Ole <a class="btn btn-default" href="/Views/Avstemning/Stemt.cshtml"> Stem</a>
         </p>
         <p>
-            Kandidat 3, Pole <a class="btn btn-default" href="Stemt"> Stem</a>
+            Kandidat 3, Pole <a class="btn btn-default" href="/Views/Avstemning/Stemt.cshtml"> Stem</a>
         </p>
         <p>
-            <a class="btn btn-default" href="Resultat">Resultater</a>
+            <a class="btn btn-default" href="/Views/Avstemning/Resultat.cshtml">Resultater</a>
         </p>
         <p>
             OBS! Avstemningen blir lukket 10.August.
