--- a/APP2000/APP2000/APP2000/Views/Avstemning/Stemt.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Avstemning/Stemt.cshtml
@@ -12,7 +12,7 @@
     </div>
     <div>
         <p>
-            Trykk <a class="btn btn-default" href="Resultat">her</a> for å se resultatet av valget
+            Trykk <a class="btn btn-default" href="/Views/Avstemning/Resultat.cshtml">her</a> for å se resultatet av valget
         </p>
     </div>
 </div>
