--- a/APP2000/APP2000/APP2000/Views/Home/Home.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Home/Home.cshtml
@@ -14,7 +14,7 @@
         <p>
           Fagforeningen tar vare på de ansatte sine interesser overfor arbeidgiver. På denne siden kan du nominere kandidater til ledervervet og stemme på din kandidat i valget.
         </p>
-        <p><a class="btn btn-default" href="~/Views/Home/Index.cshtml">Nominere</a></p>
+        <p><a class="btn btn-default" href="~/Views/Home/About.cshtml">Nominere</a></p>
     </div>
     <div class="col-md-4">
         <h2>Informasjon</h2>
