--- a/APP2000/APP2000/APP2000/Views/Home/Registrer.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Home/Registrer.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>TBLUserInfo</h4>
+    <h4>Registrer</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -53,7 +53,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to home", "Home")
 </div>
 
 @section Scripts {
