--- a/APP2000/APP2000/APP2000/Views/Home/About.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>En del av en oppgave gitt i faget APP2000 
+    Applikasjonsutvikling ved Universitetet i Sørøst-Norge, campus Vestfold høsten 2020 og 
+    våren 2021. Oppgaven går ut på å utvikle en webapplikasjon. </br>
+    Målsetning med dette prosjektet har vært å utvikle en applikasjon for gjennomføring av valg av
+    rektor ved Universitetet i Universitetet i Sørøst-Norge. </p>
