--- a/APP2000/APP2000/APP2000/Views/Home/Contact.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Universitetet i Sør-øst Norge<br />
+    Raveien 201 <br />
+    <abbr title="Telefon for kontakt">Tlf.nr:</abbr>
+    46 47 1518
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Ta kontakt:</strong>   <a href="mailto:sim1skogen@gmail.com">Sim1skogen@gmail.com</a><br />
 </address>
