--- a/APP2000/APP2000/APP2000/Views/Home/Home.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Home/Home.cshtml
@@ -4,8 +4,9 @@
 
 <div class="jumbotron">
     <h1>Valg 2021</h1>
-    <p class="Dette er hjemmesiden til valgsapplikasjonen. Her finner du Forskjellig innformasjon om valget"></p>
-    <p><a href="https://na.leagueoflegends.com/en-us/" class="btn btn-primary btn-lg">Press her</a></p>
+    <p class="Dette er hjemmesiden til valgsapplikasjonen. Her finner du Forskjellig innformasjon om valget.
+       under finner du en snarvei for å logge inn hvis du har en bruker lagret"></p>
+    <p><a href="/Views/Home/Login.cshtml" class="btn btn-primary btn-lg">Logg inn</a></p>
 </div>
 
 <div class="row">
@@ -14,20 +15,22 @@
         <p>
           Fagforeningen tar vare på de ansatte sine interesser overfor arbeidgiver. På denne siden kan du nominere kandidater til ledervervet og stemme på din kandidat i valget.
         </p>
-        <p><a class="btn btn-default" href="~/Views/Home/About.cshtml">Nominere</a></p>
+        <p><a class="btn btn-default" href="/Views/Home/About.cshtml">Mer om oss</a></p>
     </div>
     <div class="col-md-4">
         <h2>Informasjon</h2>
         <p>
-
+            Hvis du vil vite mer om valget, hvordan ting funker eller bare noe generelt om nettsiden/applikasjonen bare ta kontakt ved hjelp av kontakt siden vår.
+            Denne har du tilgang til i menyen men også som en snarvei under. Bare å ta kontakt ved spørsmål.
         </p>
-        <p><a class="btn btn-default" href="https://www.sekirothegame.com">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Views/Home/Contact.cshtml">Ta kontakt;</a></p>
     </div>
     <div class="col-md-4">
-        <h2></h2>
+        <h2>Registrering</h2>
         <p>
-
+            Her har man er snarvei for registrering av bruker. Du trenger bruker for å se alle sidene, siden det er noen sider som ikke man har tilgang til uten bruker.
+            Bli med på stemming selv ved å registrere deg under!
         </p>
-        <p><a class="btn btn-default" href="https://bloodborne.fandom.com/wiki/Bloodborne">Smack knappen</a></p>
+        <p><a class="btn btn-default" href="/Views/Home/Registrer.cshtml">Registrer deg</a></p>
     </div>
 </div>
