--- a/APP2000/APP2000/APP2000/Views/Home/Registrer.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Home/Registrer.cshtml
@@ -11,6 +11,8 @@
 {
     @Html.AntiForgeryToken()
     
+
+    // Forum for å registrere ny bruker med all informasjon som trengs
 <div class="form-horizontal">
     <h4>Registrer</h4>
     <hr />
@@ -53,7 +55,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to home", "Home")
+    @Html.ActionLink("Tilbake til hjemmesiden", "Home")
 </div>
 
 @section Scripts {
