--- a/APP2000/APP2000/APP2000/Views/Shared/_Layout.cshtml
+++ b/APP2000/APP2000/APP2000/Views/Shared/_Layout.cshtml
@@ -17,8 +17,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               @Html.ActionLink("Valg", "Home", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Valg", "Home", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @if (Session["BrukernavnSS"] != null)
@@ -32,7 +33,7 @@
                     {
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        
+
                     }
                 </ul>
 
@@ -56,7 +57,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Eksamen applikasjon</p>
         </footer>
     </div>
 
